2010-05-28 Magnus Hagdorn
 * PyGC/PyGC/GC_options.py: legend option is now a choice - choose between
   horizontal or vertical legend
 * PyGC/progs/plotGCvar: check if basemap toolkit is available, if not, do not
   plot geographic coord system and coastlines
 * various Makefile.am: make sure libraries are static

2010-05-27 Magnus Hagdorn
 * PyGC/progs/plotGCvar: shade surface
 * PyGC/PyGC/Makefile.am: forgot file

2010-05-27 Magnus Hagdorn
 * Makefile.am: conditionally add new subdirectory
 * configure.in: add option to build and install PyGC
 * PyGC: copying some files from PyCF and porting it to matplotlib

2010-05-12 Magnus Hagdorn
 * doc/ext/erosion/transport.tex: re-enable figure
 * doc/ext/erosion/figs/Makefile.am: generate figure
 * doc/ext/erosion/figs/plot_basal.py: rewrite to use matplotlib instead of
   PyGMT and PyCF

2010-05-12 Magnus Hagdorn
 * extensions/erosion/src/eis_erosion.F90: use new command line handler
 * extensions/erosion/src/simple_erosion.F90: ditto
 * extensions/erosion/src/erosion.F90: fix repository link
 * extensions/erosion/src/erosion_sediment.F90: ditto
 * extensions/erosion/src/erosion_setup.F90: ditto
 * extensions/erosion/src/erosion_types.F90: ditto

2010-05-11 Magnus Hagdorn
 * configure.in: create new Makefile
 * extensions/erosion/tests: import erosion tests from old repo
 * extensions/erosion/tests/Makefile.am: fix glimmer launcher
 * extensions/erosion/Makefile.am: decent into new directory

2010-05-11 Magnus Hagdorn
 * configure.in: create Makefiles in new subdirectories
 * doc/ext.tex, doc/ext_pdf.tex, doc/ext_ps.tex: new top level document for
   extensions
 * doc/Makefile.am: add new files
 * doc/glimmer.bib: add new references
 * doc/glimmer.tex: include new chapter
 * doc/ext/erosion: import erosion documentation from old repo
 * doc/ug/glide.tex: fix typo

2010-05-11 Magnus Hagdorn
 * configure.in: create new Makefile
 * move extensions/erosion to extensions/erosion/src

2010-05-11 Magnus Hagdorn